Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53713

[REG Qt 5.6.0 -> Qt 5.6.1] Designer: Wrong display of object when dragging when High DPI scaling is active

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.1, 5.7.0
    • 5.6.1, 5.7.0 RC
    • Tools: Designer
    • Windows 7 64 bit
      MSVC 2013 32 bit
      Creator built on Qt 5.7.0 branch ( 4e02d96116fac5208a9ce1176300fe65252cf5ff )
    • 2d838dd06ebacc58c620614719067f6dac5e7418 (qttools/5.6.1, 31.5.2016, 5.6.1)

      1. Run a Creator built on Qt 5.7.0.
      2. Create a new Qt Widgets Application.
      3. Open mainwindow.ui in Design mode.
      4. Drag an object from the library on the left into the window preview.
        While you drag the object, it is displayed in the wrong size and mostly black. See the attached video.

      While dragging, the object should look the way it's going to look in the preview window. With a Creator built on Qt 5.6.0 as well as with the standalone Widget Designer from Qt 5.7.0, this seems to work correctly.

      Happens in standalone Designer as well when setting one of the scaling variables (as does Creator). Worst of all, widgets change size when moving them on the form.

        1. bad.avi
          6.63 MB
        2. qtdiag.txt
          6 kB
        For Gerrit Dashboard: QTBUG-53713
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes