Qt Designer/DnD: Take device pixel ratio of grabbed pixmaps into account.

Change qtbase:ccfe33dc670a1491d9e1daa2ae17f5fe30484276 modifies
QWidget::grab() to return pixmaps with device pixel ratio set
when High DPI scaling is active. This caused Dnd pixmaps to have
the wrong size and the widgets to change size when moved on
the form due to the decoration having the wrong size.

Propagate the device pixel ratio and scale sizes accordingly.

Task-number: QTBUG-53713
Change-Id: I93fc5c249472913ddc4866b32d7bf2593df60635
Reviewed-by: Alessandro Portale <alessandro.portale@theqtcompany.com>